fix: adjusted the z-index of the add garmet modal

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
+  z-index: 1000;
 }
 
 .modal_opened {
@@ -37,6 +38,7 @@
   border-radius: 20px;
   border-width: 1px;
   border-color: #0000004d;
+  z-index: 1001;
 }
 
 .modal__title {
